<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/prefAcc"
        android:key="pref_key_account">
        <EditTextPreference
            android:key="pref_key_log"
            android:title="@string/prefLog"
            android:defaultValue="@string/prefLogDef"
            android:summary="@string/prefLogSum"
            android:inputType="number"
            android:singleLine="true"
            />
        <EditTextPreference
            android:key="pref_key_psw"
            android:title="@string/prefPsw"
            android:defaultValue="@string/prefPswDef"
            android:summary="@string/prefPswSum"
            android:inputType="textPassword"
            android:singleLine="true"
            />
        <EditTextPreference
            android:key="pref_key_srv"
            android:title="@string/prefSrv"
            android:defaultValue="@string/prefSrvDef"
            android:summary="@string/prefSrvSum"
            android:singleLine="true"
            />
    </PreferenceCategory>

</PreferenceScreen>